--- a/ecommerce-aventurados/src/App.css
+++ b/ecommerce-aventurados/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .back-img {
-  background-image: url("https://i.pinimg.com/564x/c1/af/0b/c1af0b63fe18e32a5e648cd9d178a03a.jpg");
+  background-image: url("https://img.freepik.com/vector-gratis/banner-negro-formas-geometricas-amarillas_1017-32327.jpg?size=626&ext=jpg&ga=GA1.2.2104487767.1640736000");
   padding: 1.5em;
   width: 100%;
 
