empezando estilos carrito

--- a/ecommerce-aventurados/src/App.css
+++ b/ecommerce-aventurados/src/App.css
@@ -47,6 +47,14 @@
   margin: 0 auto;
 }
 
+/* boton carrusel  */
+.botonIrCategoria {
+  position: absolute !important;
+  z-index: 1000;
+  bottom: 100;
+  margin: 200px;
+}
+
 .carousel-inner {
   position: relative;
   width: 100%;
